package usantatecla.mastermind.controllers;

import usantatecla.mastermind.models.Board;
import usantatecla.mastermind.models.State;

public class StartController extends Controller {

    public StartController(Board board, State state) {
        super(board, state);
    }

}
