package usantatecla.mastermind.views.graphics;

import usantatecla.mastermind.controllers.PlayController;
import usantatecla.mastermind.controllers.ResumeController;
import usantatecla.mastermind.controllers.StartController;
import usantatecla.mastermind.views.View;

public class GraphicsView implements View {

    public void start(StartController startController) {
    }

    public void play(PlayController playController) {
    }

    public boolean resume(ResumeController resumeController) {
        return true;
    }

}
